# orya-guard

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: README.md  candidate.csv  dataset_with_issues.csv  inference_payload_invalid.json  inference_payload_valid.json  inference_schema.json  train.csv
orya_guard/: __init__.py  cli.py  errors.py  runtime.py
orya_guard/checks/: common.py  comparison.py  dataset.py  inference.py
orya_guard/io/: __init__.py  data_loading.py
orya_guard/models/: __init__.py  results.py  schema.py
orya_guard/reporting/: __init__.py  console.py  markdown.py
tests/: conftest.py  test_cli.py  test_compare.py  test_data_loading.py  test_dataset_checks.py  test_inference.py
