[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "orya-guard"
version = "0.1.0"
description = "Preflight validation for ML datasets and inference payloads."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [{ name = "Dimitris Kampouridis" }]
maintainers = [{ name = "Dimitris Kampouridis" }]
keywords = ["ml", "data-validation", "inference", "pandas", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "numpy>=1.26,<2.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "pydantic>=2.7.0",
  "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/OryaOne/orya-guard"
Repository = "https://github.com/OryaOne/orya-guard"
Issues = "https://github.com/OryaOne/orya-guard/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
orya-guard = "orya_guard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["orya_guard"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
  "ignore:Pandas requires version .* of 'numexpr'.*:UserWarning",
  "ignore:Pandas requires version .* of 'bottleneck'.*:UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
